--- a/FastStylometry/Burrows_Delta.ipynb
+++ b/FastStylometry/Burrows_Delta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from faststylometry import load_corpus_from_folder\n",
     "from faststylometry import tokenise_remove_pronouns_en\n",
     "from faststylometry import calculate_burrows_delta\n",
-    "from faststylometry import predict_proba, calibrate, get_calibration_curve"
+    "from faststylometry import predict_proba, calibrate, get_calibration_curve\n",
+    "from faststylometry import convertTohtml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
        "swift                     1.480857                         1.565479"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convertTohtml('burrows_delta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +230,7 @@
        "swift                     0.067125                         0.049070"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convertTohtml('probabilities')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -264,12 +283,12 @@
     "plt.xlabel(\"Burrows delta\")\n",
     "plt.ylabel(\"Probability of same author\")\n",
     "plt.title(\"Calibration curve of the Burrows Delta probability model\\nUsing Logistic Regression with correction for class imbalance\")\n",
-    "plt.savefig(\"test.png\", bbox_inches='tight')"
+    "plt.savefig('./ReportImages/calibration.png', bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -280,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -345,12 +364,13 @@
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating curve of the Burrows\\' Delta classifier\\noperating on entire books')\n",
     "plt.legend(loc=\"lower right\")\n",
+    "plt.savefig('./ReportImages/operating_curve.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +465,7 @@
        "Text(0.5, 1.0, 'Representation using PCA of works in training corpus')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,8 +491,32 @@
     "    plt.text(pca_matrix[i][0], pca_matrix[i][1],\"  \" + df_z_scores.index[i], alpha=0.5)\n",
     "\n",
     "plt.legend()\n",
+    "plt.savefig('./ReportImages/plot.png', bbox_inches='tight')\n",
     "\n",
     "plt.title(\"Representation using PCA of works in training corpus\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pdfkit\n",
+    "\n",
+    "pdfkit.from_file('./Generated_HTML/burrows_delta.html', './PDFReports/burrows_delta.pdf')\n",
+    "pdfkit.from_file('./Generated_HTML/probabilities.html', './PDFReports/probabilities.pdf')"
    ]
   }
  ],
